message Word {
    required int32 id = 1;
    required string voc = 2;
    required string cla = 3;

    required Pron pron = 20;
    repeated Property properties = 50;
}

message Property {
    required int32 id = 1;
    required string prop = 2;

    repeated Meaning meanings = 50;
}

message Pron {
    required int32 id = 1;
    required string audio = 2;
    required string phonetic = 3;
}

message Meaning {
    required int32 id = 1;
    required string content = 2;

    repeated Example examples = 50;
}

message Example {
    required int32 id = 1;
    required string example = 2;
}

service MemorizeService {
    rpc GenNewMemorizePlan(GenNewMemorizePlanRequest) returns (GenNewMemorizePlanResponse);
    rpc MarkWord(MarkWordRequest) returns (MarkWordResponse);
    rpc GetNextWord(GetNextWordRequest) returns (GetNextWordResponse);

    rpc GetWordList (GetWordListRequest) returns (GetWordListResponse);
    rpc TriggerWordSync (TriggerWordSyncRequest) returns (TriggerWordSyncResponse);
}

message TriggerWordSyncRequest {
    repeated string cla = 1;
    optional int32 offset = 2;
    optional int32 limit = 3;
}

message TriggerWordSyncResponse { 
    required int32 id = 1;
}

message GetNextWordRequest {
    required int32 planId = 1;
    required string spell = 2;
}

message GetNextWordResponse {
    optional string word = 1;
}

message MarkWordRequest {
    required int32 planId = 1;
    required string word = 2;

    enum MemorizedStatus {
        Approvad = 0;
        Rejected = 1;
    }
    required MemorizedStatus status = 50;
}

message MarkWordResponse {
    required int32 id = 1;
}

message GenNewMemorizePlanRequest {
    required int32 from = 1;
    required int32 to = 2;
}

message GenNewMemorizePlanResponse {
    required int32 planId = 1;
}

message GetWordListRequest {
    required int32 offset = 1;
    required int32 pageSize = 2;
}

message GetWordListResponse {
    repeated Word wordList = 1;

    required int32 count = 30;

    required int32 offset = 50;
    required int32 total = 51;
}